# code-review-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bad_code_for_review/: battleship.py
src/code_review_agent/: main.py  prompts.py
